--- a/work/components/nginx/config/conf.d/tax_app.conf
+++ b/work/components/nginx/config/conf.d/tax_app.conf
@@ -1,5 +1,5 @@
-server {
-    listen       81;
+server{
+    listen       80;
     server_name  localhost;
 
     #charset koi8-r;
@@ -7,7 +7,7 @@ server {
     #access_log  logs/host.access.log  main;
 
     location / {
-        root   html;
+        root  /etc/nginx/html/public;
         index  index.php index.html index.htm;
     }
 
@@ -28,13 +28,15 @@ server {
 
     # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
     #
-    location ~ \.php$ {
+    location ~ \.php {
         fastcgi_pass   php:9000;
         fastcgi_index  index.php;
-        fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
-        include        fastcgi_params;
+        fastcgi_split_path_info ^(.+?\.php)(/.*)$;
+        set $path_info $fastcgi_path_info;
+        fastcgi_param PATH_INFO       $path_info;
+        fastcgi_param SCRIPT_FILENAME  /etc/nginx/html/public$fastcgi_script_name;
+        include fastcgi_params;
     }
-
     # deny access to .htaccess files, if Apache's document root
     # concurs with nginx's one
     #
